--- a/ReedSensor/platformio.ini
+++ b/ReedSensor/platformio.ini
@@ -8,9 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m]
+[env:d1_mini]
 platform = espressif8266
 board = d1_mini
 framework = arduino
 upload_speed = 921600
 monitor_speed = 74880
+
+[env:esp01_1]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
